--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Mitesh Pathak
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Software Engineer From Mumbai, India
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/mr-pathak/mr-pathak.github.io/master/images/me_hat.png
 
 #
 # Flags below are optional
