--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Mitesh Pathak
 
 # Short bio or description (displayed in the header)
-description: Software Engineer From Mumbai, India
+description: Software Engineer from Mumbai
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/mr-pathak/mr-pathak.github.io/master/images/me_hat.png
@@ -37,11 +37,11 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-29903400-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://www.miteshpathak.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
