--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ collections:
     output: true
     permalink: /blog/category/:name/
 
+# Show future posts
+future: true
+
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus:
