--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ collections:
 # Show future posts
 future: true
 
+timezone: Asia/Singapore
+
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus:
